force-app/main/default/objects/CDR__c/CDR__c.object-meta.xml
<CustomObject>
    <label>CDR</label>
    <nameField>
        <displayFormat>CDR-{0000}</displayFormat>
        <label>CDR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDRS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>