force-app/main/default/objects/CDR__c/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <label>Call Recording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>