force-app/main/default/objects/CDR__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>