force-app/main/default/objects/CDR__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGENT BUSY</fullName>
            </value>
            <value>
                <fullName>ANSWERED</fullName>
            </value>
            <value>
                <fullName>BUSY</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>DISCONNECTED</fullName>
            </value>
            <value>
                <fullName>FAILD</fullName>
            </value>
            <value>
                <fullName>IVR TIMEOUT</fullName>
            </value>
            <value>
                <fullName>NO AGENTS</fullName>
            </value>
            <value>
                <fullName>NO ANSWER</fullName>
            </value>
            <value>
                <fullName>QUEUE TIMEOUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>