force-app/main/default/objects/CDR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Recording__c</columns>
    <columns>Extension__c</columns>
    <columns>Duration__c</columns>
    <columns>Destination__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Agent__c</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>